--- a/homework/Day_007_HW.ipynb
+++ b/homework/Day_007_HW.ipynb
@@ -375,7 +375,7 @@
    "outputs": [],
    "source": [
     "1. object沒辦法有平均或最大值，在進行相關操作做時會發生問題。\n",
-    "2. 處理起來最複雜的是object ，因為他並非ㄕㄨ"
+    "2. 處理起來最複雜的是object ，因為它並非數值，沒辦法計算"
    ]
   }
  ],
